set version to 0.1.0, add keywords

--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "signalk-websocket-provider",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "azure-afloat",
+    "signalk-node-server-plugin"
+  ],
   "author": "Jeremy Foster <jeremy.foster@live.com> (http://codefoster.com)",
   "license": "Apache 2.0",
   "dependencies": {
